<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context="com.example.duc_joffrey_esig.hessdf.MainActivity">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="serif"
            android:text="@string/texte_accueil_titre"
            android:textSize="@dimen/titre"
            android:textColor="@android:color/black"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacement_paragraphe_titre"
            android:text="@string/texte_accueil_paragraphe_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/espacement_paragraphe"
            android:text="@string/texte_accueil_paragraphe_2" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="@dimen/accueil_image_height"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:src="@drawable/logo_hessdf_250x250_v3" />

        </RelativeLayout>


    </LinearLayout>
</ScrollView>